# ObjToFbx

./: .gitignore  CMakeLists.txt  Makefile  ObjToFbx.sln  README.md  VectorException.cxx  VectorException.h  gtest-all.cc  texture_test.fbx  texture_test.xobj
Assets/: box.xobj  texture_test.mtl
ObjToFbx/: ObjFaceTest.cpp  main.cpp  main.cxx
ObjToFbx.xcodeproj/: project.pbxproj
ObjToFbx.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ObjToFbx.xcodeproj/xcshareddata/xcschemes/: ObjToFbx.xcscheme  Test Bundle.xcscheme  gtest.xcscheme
ObjToFbx.xcodeproj/xcuserdata/danielwalsh.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ObjToFbx.xcodeproj/xcuserdata/danielwalsh.xcuserdatad/xcschemes/: objtofbx.xcscheme  xcschememanagement.plist
ObjToFbx/Exceptions/: SdkException.cxx  SdkException.h  VectorException.cxx  VectorException.h
ObjToFbx/Geometry/: ObjFace.cxx  ObjFace.h  ObjGroup.cxx  ObjGroup.h  ObjMaterial.cxx  ObjMaterial.h  ObjScene.cxx  ObjScene.h  ObjTex.cpp  ObjTex.cxx  ObjTex.h
ObjToFbx/Io/: MtlReader.cxx  MtlReader.h  ObjReader.cxx  ObjReader.h  ObjReaderFacade.cxx  ObjReaderFacade.h
ObjToFbx/Utilities/: ClTools.cpp  ClTools.cxx  ClTools.h  GeometryTools.cxx  GeometryTools.h  SdkTools.cxx  SdkTools.h  StringTools.cxx  StringTools.h
ObjToFbx_Tests/: BasicTest.cpp  CMakeLists.txt
Test Bundle/: ObjFaceTest.cxx  Test_Bundle.m  Test_Bundle.mm
